登陆页面IE6兼容性修改

--- a/public/pages/loginimage.html
+++ b/public/pages/loginimage.html
@@ -15,6 +15,7 @@
         }
         .shoutout .promo .overlay {
             background:url("/images/bk_promo_overlay3.png") no-repeat scroll 0 0 transparent;
+            _background:url("/images/bk_promo_overlay3.gif") no-repeat scroll 0 0 transparent !important;
             display:block;
             height:411px;
             position:absolute;
@@ -32,6 +33,9 @@
         }
         #shoutoutcontent {
             background-color:transparent;
+            border-style: none;
+            border-width: 0;
+            border-color: transparent;
             margin:0;
             padding:0;
         }
