--- a/public/500.html
+++ b/public/500.html
@@ -29,7 +29,7 @@
           <table cellspacing="0" cellpadding="0">
               <tr>
                   <td>
-                      <img src="/images/500.png" alt=""/>
+                      <img src="/images/error_page_bg.png" alt=""/>
                   </td>
               </tr>
           </table>
