--- a/public/500.html
+++ b/public/500.html
@@ -26,10 +26,12 @@
 <body>
   <div id="bg">
       <div>
-          <table cellspacing="0" cellpadding="0">
+          <table cellspacing="0" cellpadding="0" style="width:100%;height:480px;background-image:url(/images/error_page_bg.png)">
               <tr>
                   <td>
-                      <img src="/images/error_page_bg.png" alt=""/>
+                    <div align="center">
+                    <div style="width:500px;height:200px;color:#fff;font-size: 24px;"><%= Irm::SystemParametersManager.error_500_text %></div>
+                    </div>
                   </td>
               </tr>
           </table>
